Add version to title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
 
     <div id="Calculator" class="form">
-      <h2 class="align-center">Simple Calculator App</h2>
+      <h2 class="align-center">Simple Calculator App v1.0.0 </h2>
 
       <input name="num1" type="number" id="num1" placeholder="Enter the first number" required/>
       <input name="num2" type="number" id="num2" placeholder="Enter the second number" required/>
